Fix some spacing

--- a/_sass/style.sass
+++ b/_sass/style.sass
@@ -107,7 +107,7 @@ main
 .beers-11,
 .beers-12
   .can
-    margin: 0 2%
+    margin: 2%
 
 .beers-5,
 .beers-6
